# demo_warehouse

./: .dockerignore  .gitignore  README.md  frost.Dockerfile  justfile  nve.Dockerfile  nve.py
.github/workflows/: deploy-reports.yml
energy/: dbt_project.yml
energy/docs/: intermediate_models.md
energy/macros/: generate_schema_name.sql
energy/models/marts/: __marts.yml  dim_el_area.sql  fct_reservoir_weekly.sql  rpt_biggest_changes.sql  rpt_precipitation_trends.sql  rpt_reservoir_trends.sql
energy/models/staging/: __sources.yml  stg_areas.sql  stg_precipitation.sql  stg_reservoir_min_max_median.sql  stg_reservoir_stats.sql  stg_reservoir_stats.yml
frost/: Cargo.toml  justfile
frost/src/: config.rs  csv_writer.rs  databricks_client.rs  error.rs  frost_client.rs  main.rs
reports/: evidence.config.yaml  package.json
reports/pages/: +layout.svelte  biggest-changes.md  index.md  methodology.md  precipitation.md  reservoir.md
reports/sources/databricks/: areas.sql  biggest_changes.sql  connection.yaml  precipitation_trends.sql  reservoir_trends.sql
